--- a/complete-intro-to-react-v5-0f7977ae3ce923ecf7094b82056a809fcaf1e905/package.json
+++ b/complete-intro-to-react-v5-0f7977ae3ce923ecf7094b82056a809fcaf1e905/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "cross-env": "^7.0.2",
     "eslint": "^5.12.1",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.15.0",
@@ -21,6 +22,7 @@
   },
   "scripts": {
     "dev": "parcel src/index.html",
+    "dev:mock": "cross-env PET_MOCK=mock npm run dev",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
